# pereprava

./: CHANGELOG.md  README.md  RELEASE.md  install.sh  io.github.calstfrancis.pereprava.desktop  pyproject.toml  uninstall.sh
pereprava/: pereprava.py
pereprava.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
pereprava/logic/: actions.py  command.py  discovery.py  dry_run.py  import_export.py  rc.py  schedule.py  slug.py  status.py  units.py  validation.py
pereprava/model/: job.py  status.py
pereprava/storage/: app_state.py  history.py  jobs_store.py  linger.py  logs.py  rc_client.py  rclone.py  systemctl.py  units_io.py
pereprava/ui/: app_window.py  changelog_view.py  crypt_setup.py  history_view.py  job_form.py  job_row.py  log_view.py  pcloud_setup.py  remote_browser.py  styles.py  tray.py
