[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pereprava"
version = "0.6.2"
description = "Pereprava — a dashboard for rclone/rsync backup jobs run via systemd --user"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Cal"}]
requires-python = ">=3.10"

dependencies = []

# PyGObject/GTK4/libadwaita are provided by the system (see README) — not pip-installed,
# since building pycairo from source requires system meson/dev headers not present here.
# Install with `install.sh`, which creates the venv with --system-site-packages.

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
pereprava = "pereprava.pereprava:main"

[tool.setuptools]
packages = ["pereprava", "pereprava.model", "pereprava.logic", "pereprava.storage", "pereprava.ui"]
